@@ -1213,8 +1213,8 @@ texture_get_tile_pixbuf (ClutterTexture *texture,
       tex_width = priv->x_tiles[ix].size;
       tex_height = priv->y_tiles[iy].size;
     }
-  
-  /* Make sure if we aren't using rectangular textures that we increase the 
+
+  /* Make sure if we aren't using rectangular textures that we increase the
    * texture size accordingly.
    */
   if (priv->target_type == CGL_TEXTURE_2D) /* POT */
@@ -1989,7 +1989,7 @@ texture_update_data (ClutterTexture *texture,
       CLUTTER_NOTE (TEXTURE, "syncing for single tile");
 
       cogl_texture_bind (priv->target_type, priv->tiles[0]);
-      cogl_texture_set_alignment (priv->target_type, 4, priv->width);
+      cogl_texture_set_alignment (priv->target_type, 4, rowstride/4);
 
       cogl_texture_set_filters
 	(priv->target_type,
