@@ -1,3 +1,10 @@
+2008-02-25  Tomas Frydrych  <tf@openedhand.com>
+
+	* clutter/clutter-texture.c:
+	(texture_update_data):
+	Set alignment based on actual data rowstride, not the texture
+	width.
+
 2008-02-21  Tomas Frydrych  <tf@openedhand.com>
 
 	* clutter/x11/clutter-backend-x11.h:
